--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ erl_crash.dump
 npm-debug.log
 /assets/node_modules/
 .idea/
+/lib/slugs/pletter/templlate.aux
+/lib/slugs/pletter/templlate.fdb_latexmk
+/lib/slugs/pletter/templlate.fls
+/lib/slugs/pletter/templlate.log
