--- a/.dockerignore
+++ b/.dockerignore
@@ -1,47 +1,45 @@
-# The directory Mix will write compiled artifacts to.
-_build
+# This file excludes paths from the Docker build context.
+#
+# By default, Docker's build context includes all files (and folders) in the
+# current directory. Even if a file isn't copied into the container it is still sent to
+# the Docker daemon.
+#
+# There are multiple reasons to exclude files from the build context:
+#
+# 1. Prevent nested folders from being copied into the container (ex: exclude
+#    /assets/node_modules when copying /assets)
+# 2. Reduce the size of the build context and improve build time (ex. /build, /deps, /doc)
+# 3. Avoid sending files containing sensitive information
+#
+# More information on using .dockerignore is available here:
+# https://docs.docker.com/engine/reference/builder/#dockerignore-file
+
+.dockerignore
+
+# Ignore git, but keep git HEAD and refs to access current commit hash if needed:
+#
+# $ cat .git/HEAD | awk '{print ".git/"$2}' | xargs cat
+# d0b8727759e1e0e7aa3d41707d12376e373d5ecc
+.git
+!.git/HEAD
+!.git/refs
+
+# Common development/test artifacts
+/cover/
+/doc/
+/test/
+/tmp/
 .elixir_ls
-# database directory
-db
 
-# The directory Mix downloads your dependencies sources to.
-deps
-
-# Also ignore archive artifacts (built via "mix archive.build").
+# Mix artifacts
+/_build/
+/deps/
 *.ez
 
-uploads
-temp
-tmp
-priv/static/swagger.json
-
-# Ignore assets that are produced by build tools.
-priv/static/assets/
-
-# Ignore digested assets cache.
-priv/static/cache_manifest.json
-
-# Where 3rd-party dependencies like ExDoc output generated docs.
-doc
-# Ignore .env file
-.env
-# Ignore .fetch files in case you like to edit your project deps locally.
-.fetch
-# Ignore .git files
-.git
-.gitlab-ci.yml
-README.md
-# If you run "mix test --cover", coverage assets end up here.
-cover/
-
-# If the VM crashes, it generates a dump, let's ignore it too.
+# Generated on crash by the VM
 erl_crash.dump
 
-# In case you use Node.js/npm, you want to ignore these.
-npm-debug.log
-assets/node_modules/
-.idea/
-lib/slugs/**/template.aux
-lib/slugs/**/template.fdb_latexmk
-lib/slugs/**/template.fls
-lib/slugs/**/template.log
+# Static artifacts - These should be fetched and built inside the Docker image
+/assets/node_modules/
+/priv/static/assets/
+/priv/static/cache_manifest.json
