--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,32 @@ version: "3.8"
 services:
   web:
     stdin_open: true
+    env_file:
+      - .dev.env
     build:
       context: .
-    env_file:
-      - .env
+      args:
+        SECRET_KEY_BASE: 4aSNNwRrij5JRgDp6EXfxWXOnOuDrA2r2HZkW4EgaLnFvj3C2XqvShSiDZcAH
+        DATABASE_URL: postgres://postgres:postgres@db:5432/wraft_doc_dev
+      dockerfile: Dockerfile.dev
     environment:
       MINIO_ROOT_PASSWORD: minioadmin
       MINIO_ROOT_USER: minioadmin
       MINIO_HOST: minio
     ports:
-      - "4000:4000"
+      - 4000:4000
     depends_on:
       - db
   db:
-    image: postgres:14
+    image: postgres:14-alpine
     env_file:
-      - .env
+      - .dev.env
     restart: always
+    ports:
+      - 5432:5432
     volumes:
       - ./db:/var/lib/postgresql/data
+
   minio:
     image: minio/minio
     ports:
