fix: minor fix in url path for minio download

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,7 @@ RUN apt-get update && \
     postgresql-client inotify-tools
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    build-essential xorg libssl-dev libxrender-dev git wget vim gdebi xvfb \
+    build-essential xorg libssl-dev libxrender-dev git wget gdebi xvfb \
     # Install wkhtml to pdf
     wkhtmltopdf \
     # Install pandoc
