Create env example file wraft-docs/wraft-docs-api!188
* chore: add make file

* chore: update docker section in README file

* docs: add default user to README file

* chore: update example env

* docs: improvised readme and contributing md files

* feat: github templates

* chore: add contributing doc

* chore: remove the .DS_store file occurrence in the codebase and add git ignore entry to ensure they are not pushed to remote

* fix: minor fix

* chore: update readme

* docs: how to add env variables

* chore: remove .dev.env and .env files

* docs: how to add env variables

* chore: remove .dev.env and .env files

* docs: how to add env variables

* chore: remove .dev.env and .env files

* fix: update changelog

* docs: add changelog and update README

* chore: document

* chores: Add .env.example for environmental variables setup

- Provides a template .env.example file listing required environment variables and optional configurations needed for setting up and running the application. This aids developers in configuring the local development environment and ensuring consistency across various setups.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /db
 /pg
 
+# Ignore the environment variables file.
+/.dev.env
+
 # The directory Mix downloads your dependencies sources to.
 /deps
 
@@ -25,6 +28,9 @@
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
+
+# Ignore .DS_Store files on macOS.
+**/.DS_Store
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover
