--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,13 @@
 /pg
 
 # Ignore the environment variables file.
-/.env.dev
+/.dev.env
+.env
+.env.dev
+.env.prod
+.env.stage
+.env.test
+.env.local
 
 # The directory Mix downloads your dependencies sources to.
 /deps
