Feature/create template asset import (#7)
* feat: add template-asset and related files

* feat: add template-asset and related files

* feat: update listing files

* chore: removed downloading zip multiple time and unwanted error handling

* chore: remove unwanted error handling and removed function filter_entries/1

* feat: add contains required files and folder validation

* chore: refactor flow in enterprise, remove function for prepare_flow

* chore: refactor flow in enterprise, remove prepare_flow/2

* chore: refactor get_theme_font_file_entries/1 in template_assets.ex to validate only allowed font type are passed

* chore: refactor template_asset_file_list/1 removed helper functions

* chore: remove unwanted lines of codes and comments in wraft_json

* chore: update extract_and_prepare_layout_asset in layout

* update envrc and gitignore, renamed .dev.env to .env.dev

* chore: download_from_minio/2, add get_object/1 in minio client, rename get_wraft_json_map/

* chore: remove update_template_asset_json, refactor template asset create action

* chore: add RBAC for template_asset import, refactor template_zip_validator/2 and create controller action

* chore: refactor prepare_layout helper function

* chore: refactor get_object/1 of minio

* chore: refactor prepare data template helper functions

* chore: refactor prepare theme helper functions

* add .env.dev in gitignore

* chore: refactor get_object/1 , extract_and_save_fonts/3 and remove .env.dev

* chore: add function documentation for get_object/1 in minio

* Feature/improvement v3 (#5)

* chore: misc update

* chore: update env example file

* fix: add last_signed_in_org in seeds for user table and minor docs update

* docs: update the contributing guide

* fix: docker

* chore: misc update

* chore: update gitignore

* chore: misc update

* fix: add default role as superadmin as well as last_signed update for all organisation in seeds and mi

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 /uploads
 /organisations
 /temp
+/users
+/organisations
 /priv/static/swagger.json
 
 # Ignore assets that are produced by build tools.
