--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,9 @@ npm-debug.log
 /lib/slugs/**/template.fdb_latexmk
 /lib/slugs/**/template.fls
 /lib/slugs/**/template.log
+# Ignore the slug files except few slugs.
+priv/slugs/*
+!priv/slugs/contract/**
+!priv/slugs/gantt_chart/**
+!priv/slugs/pletter/**
 .env.custom
