fix: webhook signature verification

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,7 @@ export PDFTK_PATH=
 
 # Sentry - Error Tracking
 export SENTRY_DSN=https://public_key@app.getsentry.com/1
+
+# paddle - payment service
+export PADDLE_VENDOR_AUTH_CODE=
+export PADDLE_WEBHOOK_SECRET_KEY=
