feat: add script to create free subscription for existing organisations

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ export XELATEX_PATH=xelatex
 # Application Mode
 export MIX_ENV=dev
 
+# deployement mode
+# saas / self-hosted
+export DEPLOYEMENT_MODE=saas
+
 # Database - PostgreSQL
 # Use for development environment
 export DEV_DB_USERNAME=postgres
