chore: refactor subscription schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       args:
         SECRET_KEY_BASE: ${SECRET_KEY_BASE}
         DATABASE_URL: ${DATABASE_URL}
+        DEPLOYEMENT_MODE: ${DEPLOYEMENT_MODE}
     environment:
       MIX_ENV: dev
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
@@ -30,6 +31,9 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       SENTRY_DSN: ${SENTRY_DSN}
       XELATEX_PATH: ${XELATEX_PATH}
+      DEPLOYEMENT_MODE: ${DEPLOYEMENT_MODE}
+      PADDLE_VENDOR_AUTH_CODE: ${PADDLE_VENDOR_AUTH_CODE}
+      PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
     ports:
       - 4000:4000
     depends_on:
