feat: add trailing plan

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       SENTRY_DSN: ${SENTRY_DSN}
       XELATEX_PATH: ${XELATEX_PATH}
       DEPLOYEMENT_MODE: ${DEPLOYEMENT_MODE}
-      PADDLE_VENDOR_AUTH_CODE: ${PADDLE_VENDOR_AUTH_CODE}
+      PADDLE_API_KEY: ${PADDLE_API_KEY}
       PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
     ports:
       - 4000:4000
