chore: update deployement mode rename DEPLOYEMENT_MODE into SELF_HOSTED

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,7 @@ export XELATEX_PATH=xelatex
 export MIX_ENV=dev
 
 # deployement mode
-# saas / self-hosted
-export DEPLOYEMENT_MODE=saas
+export SELF_HOSTED=true
 
 # Database - PostgreSQL
 # Use for development environment
