--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -26,7 +26,7 @@ COPY priv priv
 COPY assets assets
 
 ARG SECRET_KEY_BASE
-ARG DEPLOYEMENT_MODE
+ARG SELF_HOSTED
 
 # only for dev
 COPY ./entrypoint_dev.sh /app/
