--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       args:
         SECRET_KEY_BASE: ${SECRET_KEY_BASE}
         DATABASE_URL: ${DATABASE_URL}
-        DEPLOYEMENT_MODE: ${DEPLOYEMENT_MODE}
+        SELF_HOSTED: ${SELF_HOSTED}
     environment:
       MIX_ENV: dev
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
@@ -31,7 +31,7 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       SENTRY_DSN: ${SENTRY_DSN}
       XELATEX_PATH: ${XELATEX_PATH}
-      DEPLOYEMENT_MODE: ${DEPLOYEMENT_MODE}
+      SELF_HOSTED: ${SELF_HOSTED}
       PADDLE_API_KEY: ${PADDLE_API_KEY}
       PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
     ports:
