--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ export XELATEX_PATH=xelatex
 # Application Mode
 export MIX_ENV=dev
 
+# deployement mode
+export SELF_HOSTED=true
+
 # Database - PostgreSQL
 # Use for development environment
 export DEV_DB_USERNAME=postgres
@@ -53,3 +56,7 @@ export PDFTK_PATH=
 
 # Sentry - Error Tracking
 export SENTRY_DSN=https://public_key@app.getsentry.com/1
+
+# paddle - payment service
+export PADDLE_API_KEY=
+export PADDLE_WEBHOOK_SECRET_KEY=
