chore: add paddle url to config

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,4 @@ export SENTRY_DSN=https://public_key@app.getsentry.com/1
 # paddle - payment service
 export PADDLE_API_KEY=
 export PADDLE_WEBHOOK_SECRET_KEY=
+export PADDLE_BASE_URL=
