--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       SENTRY_DSN: ${SENTRY_DSN}
       XELATEX_PATH: ${XELATEX_PATH}
+      TYPESENSE_API_KEY: ${TYPESENSE_API_KEY}
+      TYPESENSE_HOST: typesense
       SELF_HOSTED: ${SELF_HOSTED}
       PADDLE_API_KEY: ${PADDLE_API_KEY}
       PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
@@ -40,6 +42,7 @@ services:
     depends_on:
       - db
       - minio
+      - typesense
     restart: always
 
   db:
@@ -84,6 +87,18 @@ services:
       /usr/bin/mc mb -p myminio/$${MINIO_BUCKET};
       /usr/bin/mc policy set public myminio/$${MINIO_BUCKET};
       exit 0;"
+
+  typesense:
+    image: typesense/typesense:27.1
+    ports:
+      - "8108:8108"
+    environment:
+      TYPESENSE_API_KEY: ${TYPESENSE_API_KEY}
+    volumes:
+      - ./typesense-data:/data
+    command: >
+      --data-dir /data
+      --api-key=${TYPESENSE_API_KEY}
 
 volumes:
   db:
