--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,12 @@ export PDFTK_PATH=
 # Sentry - Error Tracking
 export SENTRY_DSN=https://public_key@app.getsentry.com/1
 
+# Typesense - Search Service
+export TYPESENSE_API_KEY=xyz
+export TYPESENSE_HOST=localhost
+export TYPESENSE_PORT=8108
+export TYPESENSE_SCHEME=http
+
 # paddle - payment service
 export PADDLE_API_KEY=
 export PADDLE_WEBHOOK_SECRET_KEY=
