--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,17 +7,24 @@ RUN apt-get update && \
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential xorg libssl-dev libxrender-dev git wget gdebi xvfb \
     wkhtmltopdf \
-    pandoc \
     texlive-fonts-recommended \
     texlive-plain-generic \
     texlive-latex-extra \
     texlive-xetex \
     imagemagick
 
+RUN wget https://github.com/jgm/pandoc/releases/download/3.6.3/pandoc-3.6.3-1-arm64.deb \
+    && dpkg -i pandoc-3.6.3-1-arm64.deb \
+    && rm pandoc-3.6.3-1-arm64.deb
+
+# Install Typst
+RUN wget -q https://github.com/typst/typst/releases/download/v0.13.0/typst-x86_64-unknown-linux-musl.tar.xz && \
+    tar -xf typst-x86_64-unknown-linux-musl.tar.xz && \
+    mv typst-x86_64-unknown-linux-musl/typst /usr/local/bin/typst && \
+    rm -rf typst-x86_64-unknown-linux-musl typst-x86_64-unknown-linux-musl.tar.xz
+
 RUN echo "xvfb-run -a -s \"-screen 0 640x480x16\" wkhtmltopdf \"\$@\"" >/usr/local/bin/wkhtmltopdf-wrapper && chmod +x /usr/local/bin/wkhtmltopdf-wrapper
 
-COPY ./entrypoint_dev.sh /app/
-# COPY ./entrypoint_dev.sh /app/entrypoint.sh
 
 WORKDIR /app
 COPY config /app/config
@@ -30,7 +37,8 @@ ARG SECRET_KEY_BASE
 ARG SELF_HOSTED
 
 # only for dev
-COPY ./entrypoint_dev.sh /app/
+COPY entrypoint_dev.sh /app/
+RUN chmod +x /app/entrypoint_dev.sh
 
 RUN mix local.hex --force && \
     mix local.rebar --force && \
