--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,8 @@ export PADDLE_WEBHOOK_SECRET_KEY=
 # Production: https://api.paddle.com
 # Development: https://sandbox-api.paddle.com
 export PADDLE_BASE_URL=
+
+# Signing - Digital Signature
+export SIGNING_LOCAL_FILE_PATH=
+export SIGNING_LOCAL_PASSWORD=
+export SIGNING_KEY_ALIAS
