--- a/.env.example
+++ b/.env.example
@@ -79,4 +79,4 @@ export PADDLE_BASE_URL=
 # Signing - Digital Signature
 export SIGNING_LOCAL_FILE_PATH=
 export SIGNING_LOCAL_PASSWORD=
-export SIGNING_KEY_ALIAS
+export SIGNING_KEY_ALIAS=
