--- a/.env.example
+++ b/.env.example
@@ -77,6 +77,9 @@ export PADDLE_WEBHOOK_SECRET_KEY=
 export PADDLE_BASE_URL=
 
 # Signing - Digital Signature
+# OPTIONAL: The local file path to the .p12 file to use stored in priv/keystore/ path.
 export SIGNING_LOCAL_FILE_PATH=
-export SIGNING_LOCAL_PASSWORD=
-export SIGNING_KEY_ALIAS=
+# OPTIONAL: The passphase for the .p12 file.
+export SIGNING_LOCAL_PASSPHRASE
+# OPTIONAL: The key alias to use for the .p12 file.
+export SIGNING_KEY_ALIAS="1"
