feat: implement document signing system with e-signatures and PDF analysis (#69)
* chore: add counter parties

* fix: minor fixes to make the api functional

* fix: make the delete signature api functional

* docs: update swagger docs for signature indexing api

* docs: minor update in docs

* fix: improvise the request and verification of signature

* fix: change the sign api to guest path

* feat: add e signature image uploader

* refactor: refactor and realign the code

* fix: minor changes on and bug fixes

* chore: remove old counter party api and combine with current signature requesst api and alter the name of request request api to add counterparty

* fix: add timestamp in counter_parties table

* chore: remove unwanted fields from e_signature table

* fix: remove unwanted fields from e_signature schema file

* fix: move the verify_signatory logic to already existing verify_ddocument access api

* fix: change pattern match order of document verification access

* fix: add verification token for signature as part of verify document access api for signing

* fix: minor preload fix on approve document access

* fix: sign api, counter party sign status old data reloaded to give new update in API

* feat: add counter party api to add just the counter party and separate API to request signature bulk or individual

* fix: minor fix

* chore: remove unused functions

* fix: minor fix

* feat: add type guest and sign within the guest access token and not handle the case as query params

* feat: list counterparties/signatories

* feat: separate signature creation from request signature and add it as separate api

* fix: return error in case of add counterparty, if counterparty is already added

* feat: temporary sign generation and build and detect signature coordinates API implementation

* feat: temp, store coordinates in e_signature table

* feat: temp update on e_sginature indexing , passing along the document url as well

* fix: temp add minor changes to api resp

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,11 @@ export PADDLE_WEBHOOK_SECRET_KEY=
 # Production: https://api.paddle.com
 # Development: https://sandbox-api.paddle.com
 export PADDLE_BASE_URL=
+
+# Signing - Digital Signature
+# OPTIONAL: The local file path to the .p12 file to use stored in priv/keystore/ path.
+export SIGNING_LOCAL_FILE_PATH=
+# OPTIONAL: The passphase for the .p12 file.
+export SIGNING_LOCAL_PASSPHRASE=
+# OPTIONAL: The key alias to use for the .p12 file.
+export SIGNING_KEY_ALIAS="1"
