feat: add the signing file local path in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       PADDLE_API_KEY: ${PADDLE_API_KEY}
       PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
       PADDLE_BASE_URL: ${PADDLE_BASE_URL}
+      SIGNING_LOCAL_FILE_PATH: ${SIGNING_LOCAL_FILE_PATH}
     ports:
       - 4000:4000
     depends_on:
