chore: update environment variable for email service from SendGrid to Resend
* changed SENDGRID_API_KEY to RESEND_API_KEY in .env.example to reflect the integration of Resend for email delivery

--- a/.env.example
+++ b/.env.example
@@ -46,9 +46,9 @@ export MINIO_BUCKET=wraft
 export MINIO_ROOT_USER=minioadmin
 export MINIO_ROOT_PASSWORD=minioadmin
 
-# SendGrid - Email Service
-export SENDGRID_API_KEY=
-# Get it from https://app.sendgrid.com/settings/api_keys
+# resend - Email Service
+export RESEND_API_KEY=
+
 
 # Optional - Admin Credentials
 export WRAFT_ADMIN_EMAIL=wraft_admin_email
