chore: update .env.example and docker-compose.yml for Resend email service integration

--- a/.env.example
+++ b/.env.example
@@ -50,8 +50,9 @@ export MINIO_BUCKET=wraft
 export MINIO_ROOT_USER=minioadmin
 export MINIO_ROOT_PASSWORD=minioadmin
 
-# resend - Email Service
-export RESEND_API_KEY=
+# Resend - Email Service
+# Visit https://resend.com to generate or manage your API key.
+export RESEND_API_KEY=your_resend_api_key_here
 
 
 # Optional - Admin Credentials
