--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,29 +15,31 @@ services:
         DATABASE_URL: ${DATABASE_URL}
         SELF_HOSTED: ${SELF_HOSTED}
     environment:
-      MIX_ENV: dev
-      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
-      GUARDIAN_KEY: ${GUARDIAN_KEY}
-      DEV_DB_USERNAME: ${DEV_DB_USERNAME}
-      DEV_DB_PASSWORD: ${DEV_DB_PASSWORD}
-      DEV_DB_NAME: ${DEV_DB_NAME}
+      CLOAK_KEY: ${CLOAK_KEY}
       DEV_DB_HOST: db
+      DEV_DB_NAME: ${DEV_DB_NAME}
+      DEV_DB_PASSWORD: ${DEV_DB_PASSWORD}
       DEV_DB_PORT: 5433
-      MINIO_URL: http://127.0.0.1:9000
+      DEV_DB_USERNAME: ${DEV_DB_USERNAME}
+      GUARDIAN_KEY: ${GUARDIAN_KEY}
+      MINIO_BUCKET: ${MINIO_BUCKET}
       MINIO_HOST: minio
       MINIO_PORT: 9000
-      MINIO_BUCKET: ${MINIO_BUCKET}
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_URL: http://127.0.0.1:9000
+      MIX_ENV: dev
+      PADDLE_API_KEY: ${PADDLE_API_KEY}
+      PADDLE_BASE_URL: ${PADDLE_BASE_URL}
+      PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
+      RESEND_API_KEY: ${RESEND_API_KEY}
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
+      SELF_HOSTED: ${SELF_HOSTED}
       SENTRY_DSN: ${SENTRY_DSN}
-      XELATEX_PATH: ${XELATEX_PATH}
+      SIGNING_LOCAL_FILE_PATH: ${SIGNING_LOCAL_FILE_PATH}
       TYPESENSE_API_KEY: ${TYPESENSE_API_KEY}
       TYPESENSE_HOST: typesense
-      SELF_HOSTED: ${SELF_HOSTED}
-      PADDLE_API_KEY: ${PADDLE_API_KEY}
-      PADDLE_WEBHOOK_SECRET_KEY: ${PADDLE_WEBHOOK_SECRET_KEY}
-      PADDLE_BASE_URL: ${PADDLE_BASE_URL}
-      SIGNING_LOCAL_FILE_PATH: ${SIGNING_LOCAL_FILE_PATH}
+      XELATEX_PATH: ${XELATEX_PATH}
     ports:
       - 4000:4000
     depends_on:
