chore: update docker-compose.yml to use Dockerfile instead of Dockerfile.dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     stdin_open: true
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
       args:
         SECRET_KEY_BASE: ${SECRET_KEY_BASE}
         DATABASE_URL: ${DATABASE_URL}
