chore: update database configuration in Docker setup and entrypoint script to use new environment variables for development

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ export SELF_HOSTED=true
 export DATABASE_URL=postgres://postgres:postgres@localhost:5432/wraft_dev_temp
 #Example: postgres://<username>:<password>@<host>:<port>/<database>
 
+# ⚠️ These variables are only used when running `docker compose up`
+# export DEV_DB_USERNAME=postgres
+# export DEV_DB_PASSWORD=postgres
+# export DEV_DB_NAME=wraft-dev-db
+
 # Phoenix - Application Server Configuration
 export PHX_SERVER=true
 export RELEASE_NAME=wraft_doc
