chore: update .env.example and entrypoint script to reflect new DATABASE_URL format and remove deprecated environment variables

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ export MIX_ENV=dev
 export SELF_HOSTED=true
 
 # User for production environment
-export DATABASE_URL=postgres://postgres:postgres@localhost:5432/wraft_dev_temp
+export DATABASE_URL=postgres://postgres:postgres@localhost:5432/wraft-dev-db
 #Example: postgres://<username>:<password>@<host>:<port>/<database>
 
 # ⚠️ These variables are only used when running `docker compose up`
