--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,13 @@ export MIX_ENV=dev
 export SELF_HOSTED=true
 
 # User for production environment
-export DATABASE_URL=postgres://postgres:postgres@localhost:5432/wraft_dev_temp
+export DATABASE_URL=postgres://postgres:postgres@localhost:5432/wraft-dev-db
 #Example: postgres://<username>:<password>@<host>:<port>/<database>
+
+# ⚠️ These variables are only used when running `docker compose up`
+# export DEV_DB_USERNAME=postgres
+# export DEV_DB_PASSWORD=postgres
+# export DEV_DB_NAME=wraft-dev-db
 
 # Phoenix - Application Server Configuration
 export PHX_SERVER=true
@@ -75,8 +80,8 @@ export PADDLE_BASE_URL=
 
 # Signing - Digital Signature
 # OPTIONAL: The local file path to the .p12 file to use stored in priv/keystore/ path.
-export SIGNING_LOCAL_FILE_PATH=
+#export SIGNING_LOCAL_FILE_PATH=
 # OPTIONAL: The passphase for the .p12 file.
-export SIGNING_LOCAL_PASSPHRASE=
+#export SIGNING_LOCAL_PASSPHRASE=
 # OPTIONAL: The key alias to use for the .p12 file.
-export SIGNING_KEY_ALIAS="1"
+#export SIGNING_KEY_ALIAS="1"
